# newsweep

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  com.sweep.local.plist  pyproject.toml  requirements.txt  start.sh  tabby_config_example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
docs/: README.md
docs/api/: endpoints.md
docs/architecture/: inference-pipeline.md  overview.md  prompt-construction.md
docs/benchmarks/: latency.md  quality.md
docs/deep-dives/: early-cancellation.md  file-watcher.md  kv-cache-reuse.md  ngram-speculation.md  token-healing.md
docs/getting-started/: configuration.md  ide-setup.md  installation.md
specs/001-fix-empty-completions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-empty-completions/checklists/: requirements.md
sweep_local/: config.py  file_watcher.py  server.py  sweep_prompt.py  token_healing.py
tests/: bench_latency.py  bench_quality.py  test_behavior.py  test_edge_cases.py  test_file_watcher.py  test_ngram.py  test_psi_context.py  test_sweep_prompt.py  test_token_healing.py
tests/fixtures/: scenarios.json  scenarios_batch1.json  scenarios_batch2.json  scenarios_batch3.json  validate_batch2.py  validate_scenarios.py
